<resources>
    <string name="app_name">PGIDoctor</string>
    <string name="new_user_click_here_to_register">New User?. Click Here To Register</string>
    <string name="already_an_user_click_here_to_login">Already an User?. Click here to Login</string>

    <!--Register form-->
    <string name="name">Full Name <font color='#FF0000'>*</font></string>
    <string name="useremail">Email ID <font color='#FF0000'>*</font></string>
    <string name="hospital">Hospital <font color='#FF0000'>*</font></string>
    <string name="unit">Unit <font color='#FF0000'>*</font></string>
    <string name="dob">Date of birth <font color='#FF0000'>*</font></string>

    <!--collect data activity-->
    <string name="patient_name">Patient Name <font color='#FF0000'>*</font></string>
    <string name="doc">Registration Date: <font color='#FF0000'>*</font></string>
    <string name="age">Age <font color='#FF0000'>*</font></string>
    <string name="village">Village <font color='#FF0000'>*</font></string>
    <string name="mobile">Mobile No. <font color='#FF0000'>*</font></string>

    <!--Profile activity-->
    <string name="full_name">PGI Admin</string>
    <string name="back_to_home">Back to\nHome</string>
    <string name="username_title">Name</string>
    <string name="username">admin007#</string>
    <string name="phone_title">Phone</string>
    <string name="phone">+000 00 000 000</string>
    <string name="hospital_title">Facility</string>
    <string name="hospital_desc">Hospital X, Unit Y</string>
    <string name="email_title">Email</string>
    <string name="email">pgidoctor@gmail.com</string>

    <string-array name="Diagnosis">
        <item>blood</item>
        <item>urine</item>
        <item>thyroid</item>
        <item>sugar</item>
        <item>cholestrol</item>
    </string-array>

    <string-array name="Tags">
        <item>Starred</item>
        <item>Important</item>
        <item>Severe</item>
        <item>Nearby</item>
    </string-array>


</resources>