<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:backgroundTint="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#3192F4"
        android:backgroundTint="@null">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/person_image"
            android:layout_width="200dp"
            android:padding="10dp"
            app:civ_border_width="4dp"
            app:civ_border_color="#ffffff"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_doctor"/>

        <TextView
            android:id="@+id/person_name"
            style="@style/TextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/full_name" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:backgroundTint="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username_title"
                    android:textSize="16dp"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/person_name1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="16dp"
                    style="@style/TextDescription"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_phone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_title"
                    android:textSize="16dp"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/person_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="16dp"
                    style="@style/TextDescription"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_email"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    android:textSize="16dp"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/person_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="16dp"
                    style="@style/TextDescription"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_address"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_title"
                    android:textSize="16dp"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/person_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_desc"
                    android:textSize="16dp"
                    style="@style/TextDescription"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="152dp"
            android:layout_marginTop="30dp"
            android:layout_height="46dp"
            android:text="Edit Profile"
            android:textSize="13dp"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints"
            android:backgroundTint="@null"/>

        <Button
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="Change Password"
            android:layout_gravity="center"
            android:textSize="13dp"
            tools:ignore="MissingConstraints"
            android:backgroundTint="@null"/>

    </LinearLayout>


</LinearLayout>